# GTA5_Recast_Navmeshing

./: Build.bat  CMakeLists.txt  ConvexVolumeTool_8cpp.html  ConvexVolumeTool_8h_source.html  CrowdTool_8cpp.html  CrowdTool_8h_source.html  DebugDraw_8cpp.html  DebugDraw_8h.html  DebugDraw_8h_source.html  DetourAlloc_8cpp.html  DetourAlloc_8h.html  DetourAlloc_8h_source.html  DetourAssert_8cpp.html  DetourAssert_8h.html  DetourAssert_8h_source.html  DetourCommon_8cpp.html  DetourCommon_8h.html  DetourCommon_8h_source.html  DetourCrowd_8cpp.html  DetourCrowd_8h.html  DetourCrowd_8h_source.html  DetourDebugDraw_8cpp.html  DetourDebugDraw_8h.html  DetourDebugDraw_8h_source.html  DetourLocalBoundary_8h_source.html  DetourMath_8h.html  DetourMath_8h_source.html  DetourNavMeshBuilder_8cpp.html  DetourNavMeshBuilder_8h.html  DetourNavMeshBuilder_8h_source.html  DetourNavMeshQuery_8cpp.html  DetourNavMeshQuery_8h.html  DetourNavMeshQuery_8h_source.html  DetourNavMesh_8cpp.html  DetourNavMesh_8h.html  DetourNavMesh_8h_source.html  DetourNode_8cpp.html  DetourObstacleAvoidance_8cpp.html  DetourObstacleAvoidance_8h.html  DetourObstacleAvoidance_8h_source.html  (+1705 more)
DebugUtils/: estrutura.txt
Detour/Include/: DetourNavMesh.h  DetourNavMeshQuery.h
Detour/Source/: DetourNavMeshQuery.cpp
Docs/: ImGuiMenuOrganization.md
GtaNavRuntime/: CMakeLists.txt  ChunkyTriMesh.cpp  ChunkyTriMesh.h  GtaNav.cpp  GtaNavAPI.cpp  GtaNavAPI.h  GtaNavContext.cpp  GtaNavContext.h  GtaNavGeometry.cpp  GtaNavGeometry.h  GtaNavProps.cpp  GtaNavProps.h  GtaNavTiles.cpp  GtaNavTiles.h  GtaNavTransform.h  InputGeom.cpp  InputGeom.h  MeshLoaderObj.cpp  MeshLoaderObj.h  export_files.py  output.txt
GtaNavViewer/: CMakeLists.txt  ExternC.cpp  ExternC.h  GtaHandler.cpp  GtaHandler.h  GtaHandlerMenu.cpp  GtaHandlerMenu.h  MathUtils.cpp  MathUtils.h  MemoryHandler.cpp  MemoryHandler.h  Mesh.cpp  Mesh.h  NavMeshBuild.h  NavMeshData.cpp  NavMeshData.h  NavMesh_Single.cpp  NavMesh_TileCacheDB.cpp  NavMesh_TileCacheDB.h  NavMesh_TileCacheGridDB.cpp  NavMesh_TileCacheGridDB.h  NavMesh_Tiled.cpp  NavmeshUpdate.cpp  ObjLoader.cpp  ObjLoader.h  Pathfind.cpp  RenderMode.h  RendererGL.cpp  RendererGL.h  ViewerApp.cpp  ViewerApp.h  ViewerAppInput.cpp  ViewerAppUtils.cpp  ViewerCamera.cpp  ViewerCamera.h  WebSockets.cpp  WebSockets.h  estrutura.txt  export_files.py  imfilebrowser.h  (+3 more)
GtaNavViewer/shaders/: basic.vert
RecastDemo/: estrutura.txt
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_3.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  (+142 more)
